--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-Django==3.0.4
+ddt
 django-bootstrap4==1.1.1
 django-crispy-forms==1.9.0
-tmdbsimple==2.2.0
+django-crontab==0.7.1
+django==3.0.4
 pyTelegramBotAPI==3.6.7
 schedule==0.6.0
-django-crontab==0.7.1
+tmdbsimple==2.2.0
