--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
+coverage==5.0.4
 ddt
 django-bootstrap4==1.1.1
 django-crispy-forms==1.9.0
 django-crontab==0.7.1
+django-nose==1.4.6
 django==3.0.4
 pyTelegramBotAPI==3.6.7
 schedule==0.6.0
